Add @bedapudi6788 as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -17,6 +17,16 @@
         "doc",
         "ideas"
       ]
+    },
+    {
+      "login": "bedapudi6788",
+      "name": "Bedapudi Praneeth",
+      "avatar_url": "https://avatars2.githubusercontent.com/u/15898654?v=4",
+      "profile": "http://bpraneeth.com",
+      "contributions": [
+        "code",
+        "ideas"
+      ]
     }
   ]
 }
