--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -28,5 +28,16 @@
         "ideas"
       ]
     }
+	{
+      "login": "TechnikEmpire",
+      "name": "Jesse Nicholson",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/11234763?v=4",
+      "profile": "http://bpraneeth.com",
+      "contributions": [
+        "code",
+		"doc",
+        "ideas"
+      ]
+    }
   ]
 }
